--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="/images/ico.ico" type="image/x-icon">
         <link rel="stylesheet" href="/storage/css/index.css">
-        <title>Home | Seraph</title>
+        <title>Home | Tanush is a Monkey</title>
 
         <meta name="description" content="an open source games site hosting 500+ games, useful utilities, powerful settings + a clean user interface">
-        <meta property="og:site_name" content="seraph">
-        <meta property="og:title" content="seraph">
+        <meta property="og:site_name" content="Tanush is a Monkey">
+        <meta property="og:title" content="Tanush is a Monkey">
         <meta property="og:type" content="website">
         <meta property="og:description" content="an open source games site hosting 500+ games, useful utilities, powerful settings + a clean user interface">
   </head>
@@ -93,12 +93,12 @@
                     <li>significantly improved animation</li>
                   </ul>
                 </li>
-                <li>seraphim - mobile update
+                <li>Tanush is a Monkeyim - mobile update
                   <ul>
-                    <li>mobile version is now detachable from seraph and can be hosted separately</li>
+                    <li>mobile version is now detachable from Tanush is a Monkey and can be hosted separately</li>
                     <li>converted games and apps from buttons to app icons for a more unique interface</li>
                     <li>blurred all theme backgrounds to help contrast content more on smaller screens</li>
-                    <li>now integratable with ios! open seraphim in safari > more > add to home page</li>
+                    <li>now integratable with ios! open Tanush is a Monkeyim in safari > more > add to home page</li>
                     <li>setting bars now stack instead of appearing next to each other</li>
                     <li>games are now sorted in alphabetical order</li>
                     <li>custom themes are now compatible with mobile mode</li>
@@ -172,11 +172,11 @@
 
           <br>
 
-          <p class="linkp"><a href="/seraphim/index.html">mobile</a> <a id="openBlankLink">open blank</a></p>
+          <p class="linkp"><a href="/Tanush is a Monkeyim/index.html">mobile</a> <a id="openBlankLink">open blank</a></p>
           <p class="linkp"><a href="updatelog.html">update log</a>
           
           <br>
-          <a href="https://github.com/AbiramiSBN" target="_blank" style="text-decoration: none;">˗ˏˋ website created/developed by @AbiramiSBN ´ˎ˗</a>
+          <a href="https://github.com/Tanush is a Monkey" target="_blank" style="text-decoration: none;">˗ˏˋ website created/developed by @Tanush is a Monkey ´ˎ˗</a>
         
       </div>
 
@@ -213,7 +213,7 @@
         });
       </script>
       <script>
-        const text = "seraph";
+        const text = "Tanush is a Monkey";
         const typingDelay = 500; 
         const initialDelay = 100; 
         const cursor = document.getElementById("cursor");
@@ -279,6 +279,7 @@
       <script src="storage/js/cookie.js"></script>
   </body>
 </html>
+
 
 
 
